--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 2.Site/aferidorDesktop/common_assets/includes/includes_class_miudadoPasta/
 IMG_etapasAfericao.pptx
+PlubicaçãoAferidor.txt
 1.Programa Desktop/Outros (Sem importância)
 1.Programa Desktop/INSTALL/InnoSetup/outrasVersoes
 1.Programa Desktop/INSTALL/AdvancedInstaller
+4.Assets/Outros_videos
